networkpolicy-study/labs/networkpolicy-lab-02/manifests/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: networkpolicy-app-lab-02
---
apiVersion: v1
kind: Namespace
metadata:
  name: networkpolicy-trusted-lab-02
  labels:
    access: trusted
---
apiVersion: v1
kind: Namespace
metadata:
  name: networkpolicy-untrusted-lab-02
  labels:
    access: untrusted
