networkpolicy-study/labs/networkpolicy-lab-02/manifests/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: networkpolicy-app-lab-02
spec:
  selector:
    app: web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
