networkpolicy-study/labs/networkpolicy-lab-02/manifests/04-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-ingress
  namespace: networkpolicy-app-lab-02
spec:
  podSelector:
    matchLabels:
      app: web
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              access: trusted
      ports:
        - protocol: TCP
          port: 80
